--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -7,12 +7,15 @@
     <uses-sdk
         android:minSdkVersion="9"
         android:targetSdkVersion="17" />
-
+    
+	<uses-permission android:name="android.permission.INTERNET" />  
+	
+	
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@android:style/Theme.NoTitleBar"  >
         <activity
             android:name="com.xiang.mycontacts.MainActivity"
             android:label="@string/app_name" >
